이모지를 MUI 아이콘으로 교체하여 라즈베리파이 호환성 개선
- 모든 이모지를 MUI 아이콘으로 교체
- 라즈베리파이에서 아이콘 표시 문제 해결
- 일관된 디자인 시스템 적용
- 접근성 및 크기 조절 가능한 벡터 아이콘 사용

--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "type": "module",
   "homepage": "https://swon8468.github.io/simpleInfo",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 3000",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "firebase": "^12.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
